[package]
name = "redit"
version = "0.1.0"
authors = ["dodgez <zacharysdodge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
crossterm = "0.19.0"
dirs = "3.0.1"
syntect = "4.5.0"

[dev-dependencies]
tempfile = "3.2.0"
