[package]
name = "redit"
version = "0.1.0"
authors = ["dodgez <zacharysdodge@gmail.com>"]
edition = "2018"
exclude = ["docs/screenshots/*.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
crossterm = "0.19.0"
dirs = "3.0.1"
serde = "1.0.125"
serde_derive = "1.0.125"
syntect = "4.5.0"
toml = "0.5.8"
tui = { version="0.14.0", default-features=false, features=["crossterm"] }

[dev-dependencies]
tempfile = "3.2.0"
